--- a/SimpsonBook/Base.lproj/Main.storyboard
+++ b/SimpsonBook/Base.lproj/Main.storyboard
@@ -1,24 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vaK-10-LB9">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SimpsonBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9sc-43-G2a">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9sc-43-G2a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7yV-iI-OZ8"/>
+                            <constraint firstItem="9sc-43-G2a" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="POP-d7-Eqx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9sc-43-G2a" secondAttribute="trailing" id="e9H-Zw-1SQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9sc-43-G2a" secondAttribute="bottom" id="mOL-bo-nvC"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="HWe-jy-RYI"/>
+                    <connections>
+                        <outlet property="tableView" destination="9sc-43-G2a" id="SSE-4H-2Z7"/>
+                        <segue destination="5ft-R1-Rcw" kind="show" identifier="toDetailsVC" id="6Np-3B-wXh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="980.91603053435108" y="-34.507042253521128"/>
+        </scene>
+        <!--DetailsVC-->
+        <scene sceneID="msT-6O-6oD">
+            <objects>
+                <viewController id="5ft-R1-Rcw" customClass="detailsVC" customModule="SimpsonBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Kd-ZM-EQD">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="name label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2F-wO-SsT">
+                                <rect key="frame" x="49" y="482" width="296" height="82"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="82" id="yyg-TE-vXI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="job label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQW-6I-bMd">
+                                <rect key="frame" x="49" y="543" width="296" height="82"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9n5-EW-bnn">
+                                <rect key="frame" x="49" y="145" width="296" height="306"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hPp-ZU-yMA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="U2F-wO-SsT" firstAttribute="leading" secondItem="HQW-6I-bMd" secondAttribute="leading" id="4lO-q1-4Am"/>
+                            <constraint firstItem="HQW-6I-bMd" firstAttribute="top" secondItem="9n5-EW-bnn" secondAttribute="bottom" constant="93" id="8oM-Mq-cv9"/>
+                            <constraint firstItem="9n5-EW-bnn" firstAttribute="centerX" secondItem="2Kd-ZM-EQD" secondAttribute="centerX" id="DHe-BP-sND"/>
+                            <constraint firstItem="9n5-EW-bnn" firstAttribute="leading" secondItem="U2F-wO-SsT" secondAttribute="leading" id="Ga8-aL-xJf"/>
+                            <constraint firstItem="U2F-wO-SsT" firstAttribute="trailing" secondItem="HQW-6I-bMd" secondAttribute="trailing" id="M3a-dc-igh"/>
+                            <constraint firstItem="hPp-ZU-yMA" firstAttribute="bottom" secondItem="HQW-6I-bMd" secondAttribute="bottom" constant="193" id="cda-ey-fJC"/>
+                            <constraint firstItem="9n5-EW-bnn" firstAttribute="top" secondItem="hPp-ZU-yMA" secondAttribute="top" constant="41" id="hrH-iM-kdx"/>
+                            <constraint firstItem="9n5-EW-bnn" firstAttribute="trailing" secondItem="U2F-wO-SsT" secondAttribute="trailing" id="nu3-EZ-B5u"/>
+                            <constraint firstItem="hPp-ZU-yMA" firstAttribute="bottom" secondItem="U2F-wO-SsT" secondAttribute="bottom" constant="254" id="oW3-Vr-3kS"/>
+                            <constraint firstItem="U2F-wO-SsT" firstAttribute="top" secondItem="9n5-EW-bnn" secondAttribute="bottom" constant="32" id="p5g-nb-ZOM"/>
+                            <constraint firstItem="9n5-EW-bnn" firstAttribute="leading" secondItem="hPp-ZU-yMA" secondAttribute="leading" constant="49" id="rhw-HA-aQe"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="mav-fC-LDC"/>
+                    <connections>
+                        <outlet property="imageView" destination="9n5-EW-bnn" id="TOa-qe-Cbb"/>
+                        <outlet property="jobLabel" destination="HQW-6I-bMd" id="Vb2-EL-OkK"/>
+                        <outlet property="nameLabel" destination="U2F-wO-SsT" id="vuC-Wc-JDt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tSq-J9-vWZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1820.6106870229007" y="-35.211267605633807"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nTg-Vc-f4e">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vaK-10-LB9" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cvn-21-a2J">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="8YM-nd-fiX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fwq-9k-f6S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="54.198473282442748" y="-34.507042253521128"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
